# alphamon-cli-rs

./: Cargo.toml  Cross.toml  README.md  justfile
src/: main.rs  query.rs
