[package]
name = "alphamon-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
alphamon-rs = { git = "https://github.com/timleg002/alphamon-rs", features = ["usb-hidapi", "serial"]}
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
lovely_env_logger = "0.6.2"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
humanize-duration = { version = "0.0.7", features = ["chrono"] }
indoc = "2.0.6"
